--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,10 @@
 server {
+    listen 80 default_server;
+    server_name _;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
     listen 443 ssl;
     listen [::]:443;
     server_name _;
