--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
     web:
         image: vectorim/element-web:latest
+        restart: always
         volumes:
             - ./element-config.json:/app/config.localhost.json:ro
 
