--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,3 +37,25 @@ server {
         client_max_body_size 50M;
     }
 }
+
+server {
+    listen 5349 ssl;
+    listen [::]:5349;
+
+    ssl_certificate     /synapse_data/localhost.tls.crt;
+    ssl_certificate_key /synapse_data/localhost.tls.key;
+
+    ssl_protocols               TLSv1.2 TLSv1.3;
+    ssl_ciphers                 "EECDH+AESGCM:EDH+AESGCM:EECDH:EDH:!SHA:!MD4:!RC4:!LOW:!MEDIUM:!CAMELLIA:!ECDSA:!DES:!DSS:!3DES:!NULL";
+    ssl_ecdh_curve              X25519:sect571r1:secp521r1:secp384r1;
+    ssl_prefer_server_ciphers   on;
+
+    ssl_session_timeout         4h;
+    ssl_session_tickets         on;
+
+    location / {
+        access_log /var/log/nginx/coturn_access_app.log;
+        error_log /var/log/nginx/coturn_error_app.log;
+        proxy_pass http://coturn:3478;
+    }
+}
